feat: Added intro and rules page
and routing... and improved layout... and fixed some tables

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HadleyvilleOnline</title>
+  <title>Hadleyville Online</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+    }
+  </style>
 </head>
 <body>
   <app-root></app-root>
